# task2_internship

./: .gitignore  README.md
analyzer/: go.mod  go_analyzer  main.go
pf/: input.pcap  main.c  meson.build
